--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "babel-jest": "^24.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
