--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
+  "homepage": "http://Finandy.github.io/,",
   "name": "react-express-app",
   "version": "1.0.0",
   "scripts": {
     "client": "npm start --prefix client",
     "server": "node server.js",
-    "start": "concurrently \"npm run server\" \"npm run client\""
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build --branch master"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -12,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "promise": "^8.1.0",
+    "react-scripts": "^4.0.3",
     "yup": "^0.32.9"
   },
   "devDependencies": {
@@ -19,6 +24,7 @@
     "@babel/core": "^7.14.0",
     "@babel/node": "^7.13.13",
     "@babel/preset-env": "^7.14.0",
-    "concurrently": "^5.3.0"
+    "concurrently": "^5.3.0",
+    "gh-pages": "^3.1.0"
   }
 }
